# wikismith

./: .gitignore  README.md  pyproject.toml  wikismith.example.yaml  wikismith.yaml
skills/: wiki-clip.md  wiki-compile.md  wiki-lint.md  wiki-query.md
src/wikismith/: __init__.py  cli.py  compile.py  config.py  lint.py  query.py  state.py  utils.py
src/wikismith/clip/: __init__.py  local.py  pdf.py  templates.py  web.py  youtube.py
tests/: test_cli.py  test_clip.py  test_compile.py  test_config.py  test_features.py  test_lint.py  test_query.py  test_state.py  test_utils.py
tests/fixtures/: clipper_settings.json  sample_article.html
